# diabuddy

./: .gitignore  Dockerfile  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  start.sh
arduino/: README.md
arduino/bg_display/: bg_display.ino
arduino/bg_lilygo_display/: README.md  bg_lilygo_display.ino
docs/: GLUCOSE_PREDICTION.md
predictor/: .env.example  .gitignore  Dockerfile  Procfile  README.md  main.py  requirements.txt
predictor/models/: .gitkeep
predictor/scripts/: train.py
predictor/src/: __init__.py  api.py  config.py  database.py  features.py  model.py
server/: Dockerfile  FITBIT_INTEGRATION.md  PREDICTION_DATA_EXPORT.md  README.md  package-lock.json  package.json  supabase-schema.sql
server/src/: config.ts  index.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityLogView.tsx  ActivityModal.tsx  ChatView.tsx  CollapsedView.tsx  DateTimePicker.tsx  ExpandedView.tsx  ExplanationView.tsx  GlucoseChart.tsx  GlucoseDisplay.tsx  GlucosePredictionChart.tsx  LoadingScreen.tsx  LoginView.tsx  MainContent.tsx  MobileStats.tsx  NavigationArrow.tsx  NoDataView.tsx  SettingsView.tsx  StatCard.tsx  Stats.tsx  StatsGrid.tsx  StatsScreen1.tsx  StatsScreen2.tsx  TopControls.tsx
src/context/: ActivitiesContext.tsx  PlatformContext.tsx  index.ts
src/hooks/: index.ts  useAuth.ts  useGlucoseData.ts  useGlucoseDataApi.ts  useHoverExpand.ts  useSwipe.ts  useWindowResize.ts  (+1 more)
(+45 files in other folders)
