[package]
name = "diabuddy"
version = "0.1.0"
description = "A Tauri menu bar app for monitoring Libre glucose readings"
authors = ["you"]
edition = "2021"

[lib]
name = "libre_glucose_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

